reworked much of the broken css, there are still some glaring issues

--- a/src/routes/portal/portal-styles.scss
+++ b/src/routes/portal/portal-styles.scss
@@ -1,13 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap");
 
-html {
-  height: 100%;
-  background-color: var(--primary-color);
-}
-body {
-  height: 100%;
-  font-family:"Courier Prime", monospace;
-}
 :root {
   --primary-color: #f44336;
   --primary-color-light: #ff7961;
